@@ -40,6 +40,9 @@ Revision history for DBIx::Class
           additional codepath (missed in 0.08260)
         - Fix inability to handle multiple consecutive transactions with
           savepoints on DBD::SQLite < 1.39
+        - Fix CDBICompat to match Class::DBI behavior handling non-result
+          blessed has_a (implicit deflate via stringification and inflate via
+          blind new) (GH#51)
 
     * Misc
         - Ensure source metadata calls always take place on the result source
